# S-Core

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  appicon.rc
res/: app.css  resources.qrc
res/html/: map-simple.html  map.html
src/: main.cpp
src/service/: MockApiService.cpp  MockApiService.h  PortSearch.cpp  PortSearch.h
src/ui/: AlertAndRecomendationFrame.cpp  AlertAndRecomendationFrame.h  AlertAndRecomendationFrame.ui  CarbonIntensityGauge.cpp  CarbonIntensityGauge.h  CircleProgressBar.cpp  CircleProgressBar.h  DashboardPage.ui  EngineStatusWidget.cpp  EngineStatusWidget.h  HintboxDialog.cpp  HintboxDialog.h  HintboxDialog.ui  HistoryPage.ui  KPIOverviewFrame.cpp  KPIOverviewFrame.h  KPIOverviewFrame.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MapboxWidget.cpp  MapboxWidget.h  MapboxWidgetSimple.cpp  MapboxWidgetSimple.h  NavigationSidebar.cpp  NavigationSidebar.h  NavigationSidebar.ui  PageWidgets.cpp  PageWidgets.h  PropulsionPIDWidget.cpp  PropulsionPIDWidget.h  RecommendationCard.cpp  RecommendationCard.h  SavingsPage.ui  SettingsPage.ui  SpeedometerWidget.cpp  SpeedometerWidget.h  TechnicalPage.ui  VoyagePlanningPage.ui  WeatherFrame.cpp  (+4 more)
src/ui/Pages/: DashboardPage.cpp  DashboardPage.h  DashboardPage.ui  DecisionSupportPage.cpp  DecisionSupportPage.h  DecisionSupportPage.ui  HistoryPage.cpp  HistoryPage.h  HistoryPage.ui  SettingPage.cpp  SettingPage.h  SettingPage.ui  TechnicalPage.cpp  TechnicalPage.h  TechnicalPage.ui  VoyagePlanningPage.cpp  VoyagePlanningPage.h  VoyagePlanningPage.ui
src/ui/Pages/Components/: DialogAddCargo.cpp  DialogAddCargo.h  DialogAddCargo.ui  DialogAddFuelPlan.cpp  DialogAddFuelPlan.h  DialogAddFuelPlan.ui  DialogAddNewVoyage.cpp  DialogAddNewVoyage.h  DialogAddNewVoyage.ui  DialogAddPortRotation.cpp  DialogAddPortRotation.h  DialogAddPortRotation.ui  DialogBrowsePort.cpp  DialogBrowsePort.h  DialogBrowsePort.ui  VoyageItemWidget.cpp  VoyageItemWidget.h
